adds venue section with google maps iframe

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -11,7 +11,7 @@
               %li.nav-item
                 %a.nav-link.px-2.text-white{href: "#home"}= t('menu.home')
               %li.nav-item
-                %a.nav-link.px-2.text-white{href: "#"}= t('menu.venue')
+                %a.nav-link.px-2.text-white{href: "#venue"}= t('menu.venue')
               %li.nav-item
                 %a.nav-link.px-2.text-white{href: "#"}= t('menu.schedule')
               %li.nav-item
