--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -31,3 +31,7 @@ header .navbar-toggler {
 .background-beige {
     background-color: #f5ecd5;
 }
+
+.background-teal {
+    background-color: #578e7e;
+}
