adds test data and empty partial for schedule

--- a/source/partials/_venue.html.haml
+++ b/source/partials/_venue.html.haml
@@ -1,4 +1,9 @@
 #venue.d-flex.align-items-center.justify-content-center.text-center.background-teal
   .container.position-relative.z-index-1
     .overlay.p-5.rounded.mt-3.mb-3{style: "position: relative; display: inline-block; background: rgba(255, 255, 255, 0.6);"}
-      %iframe{allowfullscreen: "", height: "450", loading: "lazy", referrerpolicy: "no-referrer-when-downgrade", src: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d85547.77173666573!2d20.309010223668537!3d47.92926755342982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47408d7894b04023%3A0x63adb259948d1c24!2sEger!5e0!3m2!1shu!2shu!4v1740754562716!5m2!1shu!2shu", style: "border:0;", width: "600"}
+      .row
+        .col
+          %h3= lorem.word
+          %p= lorem.sentences 5
+        .col
+          %iframe{allowfullscreen: "", height: "450", loading: "lazy", referrerpolicy: "no-referrer-when-downgrade", src: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d85547.77173666573!2d20.309010223668537!3d47.92926755342982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47408d7894b04023%3A0x63adb259948d1c24!2sEger!5e0!3m2!1shu!2shu!4v1740754562716!5m2!1shu!2shu", style: "border:0;", width: "600"}
