adds helper, so header always renders the correct root url for all locales

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -1,7 +1,7 @@
 %header.p-3
   .container
     .d-flex.flex-wrap.align-items-center.justify-content-center.justify-content-lg-between
-      %a.d-flex.align-items-center.mb-2.mb-lg-0.text-white.text-decoration-none{href: "/"}
+      %a.d-flex.align-items-center.mb-2.mb-lg-0.text-white.text-decoration-none{href: "#{localized_root_url}"}
         %span.fs-4 #{data.general_details.title} #{data.general_details.annum}
 
       %nav.navbar.navbar-expand.navbar-dark.bg-dark
