--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -13,7 +13,7 @@
               %li.nav-item
                 %a.nav-link.px-2.text-white{href: "#venue"}= t('menu.venue')
               %li.nav-item
-                %a.nav-link.px-2.text-white{href: "#"}= t('menu.schedule')
+                %a.nav-link.px-2.text-white{href: "#schedule"}= t('menu.schedule')
               %li.nav-item
                 %a.nav-link.px-2.text-white{href: "#"}= t('menu.about_us')
               %li.nav-item.dropdown
