add helper to generate correct localized urls for links, get rid of deprecation warnings

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -23,6 +23,6 @@
                 %a.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", href: "#"} Language
                 %ul.dropdown-menu
                   %li
-                    %a.dropdown-item{href: "/en/"} English
+                    %a.dropdown-item{href: localized_url_for('en/index.html')} English
                   %li
-                    %a.dropdown-item{href: "/"} Magyar
+                    %a.dropdown-item{href: localized_url_for('index.html')} Magyar
