--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -9,7 +9,7 @@
     %script{crossorigin: "anonymous", integrity: "sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz", src: "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"}
     / Use the title from a page's frontmatter if it has one
     %title= "#{data.general_details.title} #{data.general_details.annum}"
-    = stylesheet_link_tag "site"
+    %link{href: localized_url_for('stylesheets/site.css'), rel: 'stylesheet'}
     = javascript_include_tag "site"
   %body
     = yield
