--- a/source/partials/_hero.html.haml
+++ b/source/partials/_hero.html.haml
@@ -1,7 +1,7 @@
 .hero-section.d-flex.align-items-center.justify-content-center.text-center{style: "background: url(#{t('paths.hero_img')}) no-repeat center center/cover; height: 95vh;"}
   .container.position-relative.z-index-1
     / Text overlay with background color
-    .overlay.p-5.rounded{style: "position: relative; display: inline-block; background: rgba(0, 0, 0, 0.6);"}
-      %h1.display-3.fw-bold.text-cream #{data.general_details.title} #{data.general_details.annum}
-      %h2.display-3.fw-bold.text-cream #{data.general_details.date}
-      %h3.display-3.fw-bold.text-cream #{data.general_details.location}
+    .overlay.p-5.rounded{style: "position: relative; display: inline-block; background: rgba(247, 247, 247, 0.97);"}
+      %hp.display-4.fw-bold.text-orange.stencil-font= t('hero.date').upcase
+      %h1.display-3.fw-bold.stencil-font #{data.general_details.title.upcase} #{data.general_details.annum}
+      %h3.display-4.fw-bold.text-orange.stencil-font #{data.general_details.location.upcase}
