Site is capable of displaying more than one stages per day

--- a/source/partials/_schedule.html.haml
+++ b/source/partials/_schedule.html.haml
@@ -1,15 +1,21 @@
 #schedule
   .container.mt-5.mb-5
-    - data.schedule.each do |date, timeslots|
-      .row.justify-content-center
+    .container.text-center
+      %h3= t('menu.schedule')
+      %p.mb-5= t('schedule.disclaimer')
+    - data.schedule.each do |date, stages|
+      .row.justify-content-center.mt-3
         .col-12.text-center
           %h3= date
 
       .row.justify-content-center
-        .col-md-8.col-lg-6
-          %table.table.table-striped
-            %tbody
-              - timeslots.each do |timeslot, performer|
-                %tr
-                  %td= format_to_time(timeslot)
-                  %td= performer
+        - stages.each do |stage, timeslots|
+          .col-12.col-lg-6.mb-4
+            .text-center
+              %h4.text-orange= t("schedule.stages.#{stage}")
+            %table.table.table-striped
+              %tbody
+                - timeslots.each do |timeslot, performer|
+                  %tr
+                    %td= format_to_time(timeslot)
+                    %td= performer
