Adds gig_duration helper to display start and end time of gigs

--- a/source/partials/_schedule.html.haml
+++ b/source/partials/_schedule.html.haml
@@ -17,5 +17,5 @@
               %tbody
                 - timeslots.each do |timeslot, performer|
                   %tr
-                    %td= format_to_time(timeslot)
+                    %td= gig_duration(timeslot, performer)
                     %td= performer
