Adds memories page to the website

--- a/source/localizable/memories.en.html.haml
+++ b/source/localizable/memories.en.html.haml
@@ -1,5 +1,5 @@
 = partial 'partials/header'
-.container.mt-3
+.container.mt-3.mb-5
   .row.g-3
     - data.memories.each do |num, memory|
       .col-12.col-sm-6.col-md-4.col-lg-3
