--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -12,17 +12,19 @@
           .collapse.navbar-collapse#navbarNav
             %ul.navbar-nav.ms-auto.mb-2.mb-lg-0
               %li.nav-item
-                %a.nav-link.px-2.text-white{href: "#home"}= t('menu.home')
+                %a.nav-link.px-2.text-white{href: localized_url_for('/#home')}= t('menu.home')
               %li.nav-item
-                %a.nav-link.px-2.text-white{href: "#venue"}= t('menu.venue')
+                %a.nav-link.px-2.text-white{href: localized_url_for('/#venue')}= t('menu.venue')
               %li.nav-item
-                %a.nav-link.px-2.text-white{href: "#schedule"}= t('menu.schedule')
+                %a.nav-link.px-2.text-white{href: localized_url_for('/#schedule')}= t('menu.schedule')
               %li.nav-item
-                %a.nav-link.px-2.text-white{href: "#contact"}= t('menu.contact')
+                %a.nav-link.px-2.text-white{href: localized_url_for('/#contact')}= t('menu.contact')
+              %li.nav-item
+                %a.nav-link.px-2.text-white{href: localized_url_for('memories')}= t('menu.memories')
               %li.nav-item.dropdown
                 %a.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", href: "#"} Language
                 %ul.dropdown-menu
                   %li
-                    %a.dropdown-item{href: localized_url_for('en/index.html')} English
+                    %a.dropdown-item{href: change_locale(:en)} English
                   %li
-                    %a.dropdown-item{href: localized_url_for('index.html')} Magyar
+                    %a.dropdown-item{href: change_locale(:hu)} Magyar
