--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -9,22 +9,23 @@
           %button.navbar-toggler{"type" => "button", "data-bs-toggle" => "collapse", "data-bs-target" => "#navbarNav", "aria-controls" => "navbarNav", "aria-expanded" => "false", "aria-label" => "Toggle navigation"}
             %span.navbar-toggler-icon
 
-          .collapse.navbar-collapse#navbarNav
-            %ul.navbar-nav.ms-auto.mb-2.mb-lg-0
-              %li.nav-item
-                %a.nav-link.px-2.text-white{href: localized_url_for('/#home')}= t('menu.home')
-              %li.nav-item
-                %a.nav-link.px-2.text-white{href: localized_url_for('/#venue')}= t('menu.venue')
-              %li.nav-item
-                %a.nav-link.px-2.text-white{href: localized_url_for('/#schedule')}= t('menu.schedule')
-              %li.nav-item
-                %a.nav-link.px-2.text-white{href: localized_url_for('/#contact')}= t('menu.contact')
-              %li.nav-item
-                %a.nav-link.px-2.text-white{href: localized_url_for('memories')}= t('menu.memories')
-              %li.nav-item.dropdown
-                %a.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", href: "#"} Language
-                %ul.dropdown-menu
-                  %li
-                    %a.dropdown-item{href: change_locale(:en)} English
-                  %li
-                    %a.dropdown-item{href: change_locale(:hu)} Magyar
+        .collapse.navbar-collapse#navbarNav
+          %ul.navbar-nav.ms-auto.mb-2.mb-lg-0
+            %li.nav-item
+              = link_to t('menu.home'), 'index.html#home', class: 'nav-link px-2 text-white'
+            %li.nav-item
+              = link_to t('menu.venue'), 'index.html#venue', class: 'nav-link px-2 text-white'
+            %li.nav-item
+              = link_to t('menu.schedule'), 'index.html#schedule', class: 'nav-link px-2 text-white'
+            %li.nav-item
+              = link_to t('menu.contact'), 'index.html#contact', class: 'nav-link px-2 text-white'
+            %li.nav-item
+              = link_to t('menu.memories'), 'memories/index.html', class: 'nav-link px-2 text-white'
+
+            %li.nav-item.dropdown
+              %a.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", href: "#"} Language
+              %ul.dropdown-menu
+                %li
+                  %a.dropdown-item{href: change_locale(:en)} English
+                %li
+                  %a.dropdown-item{href: change_locale(:hu)} Magyar
