--- a/source/localizable/memories.hu.html.haml
+++ b/source/localizable/memories.hu.html.haml
@@ -1,5 +1,8 @@
 = partial 'partials/header'
 .container.mt-3.mb-5
+  .container.text-center
+    %h3= t('menu.memories')
+    %p= t('memories.description')
   .row.g-3
     - data.memories.each do |num, memory|
       .col-12.col-sm-6.col-md-4.col-lg-3
