Temporarily disable memories menu item

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -19,8 +19,8 @@
               = link_to t('menu.schedule'), 'index.html#schedule', class: 'nav-link px-2 text-white'
             %li.nav-item
               = link_to t('menu.contact'), 'index.html#contact', class: 'nav-link px-2 text-white'
-            %li.nav-item
-              = link_to t('menu.memories'), 'memories/index.html', class: 'nav-link px-2 text-white'
+            / %li.nav-item
+            /   = link_to t('menu.memories'), 'memories/index.html', class: 'nav-link px-2 text-white'
 
             %li.nav-item.dropdown
               %a.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", href: "#"} Language
