--- a/source/partials/_memories.html.haml
+++ b/source/partials/_memories.html.haml
@@ -6,8 +6,8 @@
     - data.memories.each do |num, memory|
       .col-12.col-sm-6.col-md-4.col-lg-3
         .card.h-100.d-flex.flex-column
-          %img.card-img-top{:alt => "...", :src => memory[:thumbnail]}/
+          %img.card-img-top{alt: "", src: memory[:thumbnail]}/
           .card-body.mt-auto.d-flex.flex-column.justify-content-end
             %h5.card-title= "##{num} #{memory[:title]}"
             %p.card-text= memory[:description]
-            %a.btn.btn-primary.mt-2{:href => memory[:url], :target => "_blank"}= t('buttons.visit')
+            %a.btn.btn-primary.mt-2{href: memory[:url], target: "_blank"}= t('buttons.visit')
