--- a/source/partials/_venue.html.haml
+++ b/source/partials/_venue.html.haml
@@ -18,3 +18,6 @@
               width: "100%",
               height: "450"
             }
+      .row.justify-content-center
+        .col-lg-10.col-md-12
+          = partial 'partials/venue_camping'
