Adds cultural events' details to schesule

--- a/source/partials/_schedule.html.haml
+++ b/source/partials/_schedule.html.haml
@@ -19,3 +19,4 @@
                   %tr
                     %td= gig_duration(timeslot, performer)
                     %td= performer
+    = partial 'partials/schedule_cultural'
